chore: misc random little fixes